--- a/app/@modal/(.)notes/[id]/NotePreview.module.css
+++ b/app/@modal/(.)notes/[id]/NotePreview.module.css
@@ -66,3 +66,19 @@
     display: inline-block;
     background-color: transparent;
   }
+
+  .message {
+    font-size: 50px;
+    color:#0d6efd;
+    font-weight: bold;
+    letter-spacing: 1px;
+    text-align: center;
+  }
+
+  .errorMessage{
+    font-size: 50px;
+    color:red;
+    font-weight: bold;
+    letter-spacing: 1px;
+    text-align: center;
+  }
